[tool.poetry]
name = "pypiprocessbook"
version = "0.2.0"
description = ""
authors = ["Vithor Jaeger <vaphes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^306"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.0.287"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
